# tomgoring.co.uk

./: .gitmodules  Cargo.toml  README.md
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: App.jsx  TodoList.jsx
frontend/src/store/actions/: todoActions.js
kubernetes-config/database/: pg-service.yaml  pv.yaml  stateful-set.yaml
kubernetes-config/website/: deployment.yaml  ingress.yaml  registry-ingress.yaml  service.yaml
src/: main.rs
src/todo/: model.rs  routes.rs
