[package]
name = "todo-app"
version = "0.1.0"
authors = ["Tom Goring <tgoring97@gmail.com>"]
edition = "2018"

[dependencies]
listenfd = "0.3"
actix-web = "2.0.0"
actix-rt = "*"
serde = "1.0.106"
serde_json = "1.0.51"
sqlx = { version = "*", features = [ "postgres" ] }
futures = "*"
dotenv = "*"
anyhow = "*"
log = "*"
actix-cors = "0.2.0"
env_logger = "0.7.1"
